--- a/css/style.css
+++ b/css/style.css
@@ -291,30 +291,6 @@ video {
     vertical-align: baseline;
 } */
 
-/* ------------------------------
-Preloader
---------------------------------- */
-.preloader{
-    position: fixed;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    background-color: var(--main-to-dark-color);
-    z-index: 3000;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.preloader span{
-    display: block;
-    height: 60px;
-    width: 60px;
-    background-color: var(--dark-to-main-color);
-    border-radius: 50%;
-    animation: zoomInOut_01 1s ease infinite;
-    z-index: 4000;
-}
 
 /* ----------
 Navbar
@@ -1918,3 +1894,25 @@ Responsive
 }
 }
 
+/* ---------------------
+intro Animation 
+------------------------- */
+
+.hero-image {
+	position: absolute;
+	top: 0;
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.wrapper-img {
+	position: absolute;
+	overflow: hidden;
+	position: relative;
+	margin: 0 auto;
+	width: 50%;
+	height: 100vh;
+}
