--- a/css/style.css
+++ b/css/style.css
@@ -429,6 +429,7 @@ Scroll Down
 ------------------------------------- */
 .first-section {
     background-image: url('https://images.pexels.com/photos/696680/pexels-photo-696680.jpeg?auto=compress&cs=tinysrgb&h=650&w=940');
+    z-index: 111;
   }
   .ctn-title {
     -webkit-background-clip: te xt;
@@ -444,11 +445,12 @@ Scroll Down
     text-align: center;
     top: 50%;
     transform: translate(-50%, -50%);
+    z-index: 111;
   }
   
   .ctn-icon {
     animation: jump-arrow 2.5s infinite;
-    bottom: 0;
+    bottom: 115px;
     color: #ffffff;
     display: block;
     font-size: 2.5em;
@@ -459,6 +461,7 @@ Scroll Down
     text-align: center;
     transform: translatex(-50%);
     width: 1.5em;  
+    z-index: 111;
   }
   
   .ctn-icon:hover,
@@ -1906,13 +1909,14 @@ intro Animation
 	display: flex;
 	justify-content: center;
 	align-items: center;
+  z-index: 10;
 }
 
-.wrapper-img {
+.front-img {
 	position: absolute;
 	overflow: hidden;
 	position: relative;
 	margin: 0 auto;
-	width: 50%;
+	width: 100%;
 	height: 100vh;
 }
